--- a/Assets/Scripts/SnowBoarder.asmdef
+++ b/Assets/Scripts/SnowBoarder.asmdef
@@ -2,7 +2,8 @@
     "name": "SnowBoarder",
     "rootNamespace": "",
     "references": [
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4"
+        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
+        "GUID:75469ad4d38634e559750d17036d5f7c"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
